@@ -1270,6 +1270,7 @@
 /memcheck/tests/s390x/cu42
 /memcheck/tests/s390x/ltgjhe
 /memcheck/tests/s390x/tmxx
+/memcheck/tests/s390x/vme
 /memcheck/tests/s390x/vstrc
 /memcheck/tests/s390x/vfae
 /memcheck/tests/s390x/vistr
