@@ -136,6 +136,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 509107  memcheck/tests/duplicate_align_size_errors.cpp fails
 509139  Update BadSize error messages
 509258  FreeBSD: add jail_attach_jd and jail_remove_jd syscall wrappers
+509517  s390x: Even/odd lane confusion in various vector insns
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
